<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Beeld van</string>
    <string name="btnAddPhoto">Foto toevoegen</string>
    <string name="btnAddTxt">Overslaan</string>
    <string name="PreviewbtnChangeTxt">Wijzig Tekst</string>
    <string name="PreviewbtnChangePhoto">Wijzig Foto</string>
    <string name="Continue">Ik ben tevreden!</string>
    <string name="deletephoto">Verwijder foto</string>
    <string name="ChooseaTask">Kies een bron</string>
    <string name="ChooseApp">Kies een bron</string>
    <string name="ChoosefromGallery">Gemaakte foto\'s</string>
    <string name="CapturePhoto">Camera"</string>
    <string name="PreviewbtnAddPhoto">Foto toevoegen</string>
    <string name="PreviewbtnAddTxt">Tekst toevoegen</string>
    <string name="CropOption">Pas formaat aan</string>
    <string name="PhotoOption">Selecteer afbeelding</string>
    <string name="MsgHint">Voer hier direct jouw bericht in.</string>
    <string name="MsgMaxLines">Houd er rekening mee dat er maximaal 4 regels op kunnen.</string>
    <string name="MsgCont">Tevreden? Bekijk dan je preview!</string>
    <string name="MsgBtnPrev">Preview</string>
    <string name="ConfirmCheckbox">Ik heb alle rechten voor de inhoud van mijn inzending.</string>
    <string name="ConfirmEmailHint">Vul hier uw e-mailadres in</string>
    <string name="ConfirmBtn">Verstuur het bericht!</string>
    <string name="ConfirmCheckboxError">U moet akkoord gaan</string>
    <string name="ConfirmEmailError">Controleer uw e-mailadres.</string>
    <string name="ConfirmDateError">Tijdreizen is onmogelijk. De inzending moet in de toekomst.</string>
    <string name="FinalThnx">Bedankt!</string>
    <string name="FinalTip">Je krijgt een e-mail wanneer je bericht is goedgekeurd.</string>
    <string name="InternetCheck">Er is geen internet verbinding gevonden, controleer uw internetverbinding en probeer het opnieuw.</string>
    <string name="UploadDialog">Uw inzending wordt verstuurd</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Beeld van</item>
        <item>Informatie</item>
        <item>Nieuws</item>
        <item>Informatie over de App</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->


    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="News">Nieuws</string>
    <string name="like_ons_op_facebook_">Like ons op Facebook!</string>
    <string name="wat_wilt_u_plaatsen_op_de_haagse_toren_">Wat wilt u plaatsen op de haagse toren?</string>
    <string name="foto_en_tekst">Foto en tekst</string>
    <string name="alleen_tekst">Alleen tekst</string>
    <string name="Overslaan">Overslaan</string>
    <string name="done">Done</string>
    <string name="afbleeding">Afbeelding</string>

    <!--email question page-->
    <string name="email_question_title">Waarom mijn e-mailadres?</string>
    <string name="email_question_text">Vul je e-mailadres in zodat er een ontvangstbevestiging en/of een goedkeuring van de desbetreffende foto en tekst opgestuurd kan worden.</string>

    <!--HTML app info string-->
    <string name="app_info"><![CDATA[<p><span style="color: #000000; font-family: arial, sans, sans-serif; font-size: 13px; line-height: normal; white-space: pre-wrap;">Beeld Van is de app die je toegang geeft tot vele grote schermen bij jou in buurt. Deel jouw mooiste foto met je eigen stad, of verras je vriend of vriendin aan de andere kant van het land.</span></p>
<br>
<p><span style="color: #000000; font-family: arial, sans, sans-serif; font-size: 13px; line-height: normal; white-space: pre-wrap;">Beeld Van is een initiatief van <a href="http://www.ngagemedia.nl">Ngage Media</a> en draait op het groeiende netwerk van grote schermen in eigen beheer.</p><br>
    <p><span style="color: #000000; font-family: arial, sans, sans-serif; font-size: 13px; line-height: normal; white-space: pre-wrap;\">Persoonlijke inzendingen zijn gratis, voor advertentie mogelijkheden neem contact op met ons via <a href="mailto:sales@ngagemedia.nl">sales@ngagemedia.nl</a>.</span></p><br>
    <p><span style="color: #000000; font-family: arial, sans, sans-serif; font-size: 13px; line-height: normal; white-space: pre-wrap;">Ngage Media keurt de inzendingen voor plaatsing, en behoudt het recht om zonder opgaaf van rede een inzending af te keuren. Een goedgekeurd bericht is geen garantie op een geplaatst bericht, aangezien dit met de huidige ruimte op het scherm te maken heeft.</span></p>]]>
    </string>
    <!-- More Strings -->
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="time_">"Time: "</string>
    <string name="date_">"Date: "</string>

    <string name="save">Save</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>

    <!--Alert dialog-->
    <string name="message_alert_text">Weet u zeker dat u het maken van het bericht wilt verlaten? Deze wordt niet opgeslagen</string>
    <string name="message_alert_title">Bericht plaatsen verlaten</string>
    <!-- Standard Fonts-->
    <string name="light_font">sans-serif-light</string>
    <string name="thin_font">sans-serif-thin</string>



    <!--Play Services Errors-->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">
        Illegal arguments: Latitude %1$.8f Longitude %2$.8f
    </string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">
        Location update error. code %1$d message %2$s
    </string>
    <string name="location_update_missing_update">
        Location update error. No incoming location.
    </string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">
        Can\'t request location updates, previous request hasn\'t finished
    </string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    <string name="connection_error_code">Connection failure error code: %1$d</string>
    <string name="connection_error_disabled">Google Play services is disabled</string>
    <string name="connection_error_internal">An internal error occurred</string>
    <string name="connection_error_invalid">The version of Google Play services on this device is not authentic</string>
    <string name="connection_error_invalid_account">The specified account name is invalid</string>
    <string name="connection_error_license_check_failed">The app is not licensed to the user</string>
    <string name="connection_error_message">Connection failure error message: %1$s</string>
    <string name="connection_error_misconfigured">The application is misconfigured</string>
    <string name="connection_error_missing">Google Play services is missing</string>
    <string name="connection_error_needs_resolution">Additional resolution is required</string>
    <string name="connection_error_network">A network error occurred</string>
    <string name="connection_error_outdated">Google Play services is out of date</string>
    <string name="connection_error_sign_in_required">The user is not signed in</string>
    <string name="connection_error_unknown">An unknown error occurred</string>

</resources>
