<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backrepeat"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/mainScreenTtlTV"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/afbleeding"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/progress_0Img"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainScreenTtlTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/progress_0"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:scaleType="fitCenter" />

    <ImageView
        android:id="@+id/camaerIconImg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/progress_0Img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/camera_big" />

    <GridView
        android:id="@+id/postedImgsGridView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/camaerIconImg"
        android:layout_alignParentBottom="true"
        android:cacheColorHint="@color/transparent"
        android:numColumns="3"
        android:visibility="gone" >
    </GridView>

    <RelativeLayout
        android:id="@+id/bottomBarRL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/mainBottomBarColor"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/overslaanTv"
            style="@style/textCentre"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:paddingLeft="4dp"
            android:paddingRight="7dp"
            android:text="@string/Overslaan"
            android:textColor="@color/white"
            android:onClick="onClick"
            android:clickable="true"
                />

        <TextView
            android:id="@+id/doneTV"
            style="@style/textCentre"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:paddingLeft="4dp"
            android:paddingRight="7dp"
            android:text="@string/done"
            android:onClick="onClick"
            android:clickable="true"    />
    </RelativeLayout>

</RelativeLayout>