<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backrepeat"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/progress_4Img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/progress_4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/confirmOptionsLL"
        android:layout_below="@+id/progress_4Img"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dateLblTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateTimeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/lineSeparator"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/dateLblTv"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="@color/dark_trans" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lineSeparator" >

            <RelativeLayout
                android:id="@+id/dateTimeLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/datePickerLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <DatePicker
                    android:id="@+id/datePicker1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/datePickerLbl"
                    android:calendarViewShown="false"
                    android:fitsSystemWindows="true"
                    android:textDirection="locale" />

                <TextView
                    android:id="@+id/timePickerLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/timePicker1"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/datePicker1"
                    android:text="@string/time_"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TimePicker
                    android:id="@+id/timePicker1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/timePickerLbl"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/datePicker1"
                    android:fitsSystemWindows="true"
                    android:layoutMode="clipBounds" />
            </RelativeLayout>
        </HorizontalScrollView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/confirmOptionsLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/email"
                android:drawableLeft="@drawable/envelope"
                android:drawablePadding="25dp"
                android:drawableRight="@drawable/question_mark"
                android:ems="10"
                android:hint="@string/ConfirmEmailHint"
                android:inputType="textEmailAddress"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:selectAllOnFocus="true"
                android:textSize="18sp" />
        </RelativeLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:button="@drawable/btn_check_holo_dark"
            android:checked="false"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="15dp"
            android:radius="5dp"
            android:text="@string/ConfirmCheckbox"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnfinalsubmit"
            style="@style/buttonArrowGreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:text="@string/ConfirmBtn"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>