<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/mainLayout"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/backrepeat"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="true"
              android:orientation="vertical" >

    <ImageView
            android:id="@+id/progress_2Img"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/progress_2"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp" />

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        android:id="@+id/msgRL"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/progress_2Img">

        <ImageView
                android:id="@+id/aspectv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="false"
                android:background="@drawable/back"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY" />

        <EditText
                android:id="@+id/txtView_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/aspectv"
                android:layout_alignLeft="@+id/aspectv"
                android:layout_alignRight="@+id/aspectv"
                android:layout_alignTop="@+id/aspectv"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal|top"
            android:background="@drawable/border"
                android:clickable="true"
                android:gravity="center_vertical|left"
                android:hint="@string/MsgHint"
                android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
                android:lineSpacingExtra="-4dp"
                android:lines="4"
                android:maxHeight="450dp"
                android:maxLines="4"
                android:maxWidth="600dp"
                android:minHeight="225dp"
                android:minLines="4"
                android:minWidth="300dp"
                android:singleLine="false"
                android:textColor="#f5f5f5"
                android:textSize="50sp"

                android:textStyle="bold"/>


    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/layouthidekey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/green"
            android:gravity="center|end"
            android:visibility="gone"
        android:layout_alignParentBottom="true">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Done"
                android:fontFamily="@string/light_font"
                android:id="@+id/btnhidekey"
                style="@style/button_wide_right"
                android:paddingLeft="30dp"
                android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/msgContRL"
        android:visibility="invisible"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btnpreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_simple"
            android:fontFamily="@string/light_font"
            android:text="@string/MsgBtnPrev"
            android:textColor="#FFFFFF"
            android:layout_alignParentBottom="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MsgCont"
            android:fontFamily="@string/light_font"
            android:id="@+id/txtpreview"
            style="@style/standardText"
            android:layout_above="@+id/btnpreview"
            android:layout_marginBottom="10dp" />
    </RelativeLayout>

</RelativeLayout>