<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/mainQuestion"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@drawable/backrepeat"
            android:contentDescription="@string/app_name"
            android:padding="60dp"
            android:src="@drawable/bvdh_logo" />
    </LinearLayout>

    <TextView
        android:id="@+id/mainQuestion"
        style="@style/textCapsCentre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_crop"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/StartQuestion"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_crop"
        style="@style/BvDH_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_Skip"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal|bottom|left"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:drawableLeft="@drawable/textphoto"
        android:drawableRight="@drawable/arrow"
        android:gravity="center_vertical|center"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:text="@string/btnAddPhoto"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_Skip"
        style="@style/BvDH_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:drawableLeft="@drawable/text"
        android:drawableRight="@drawable/arrow"
        android:gravity="center_vertical|center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/btnAddTxt"
        android:textColor="#000000"
        android:textSize="18sp" />

</RelativeLayout>